# Capstone-Project

./: .gitignore  Makefile  README.md  projectflow.txt  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py  logreg_model.pkl
