[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Varun Gupta"
version = "0.0.1"
description = "This is an end to endmlops project"
authors = [
  { name = "This is an end to end mlops project" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Varun Gupta"]
include = ["pyproject.toml", "Varun Gupta/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Varun Gupta"]
force-sort-within-sections = true

